fixes imsi call failure count and duration alignment

--- a/griffinApp/griffinApp-WarModule/src/main/webapp/css/networkEngineer.css
+++ b/griffinApp/griffinApp-WarModule/src/main/webapp/css/networkEngineer.css
@@ -16,6 +16,7 @@
 #supportEngQueryOne,
 #supportEngQueryTwo,
 #phoneFailuresTable,
-#top10ComboChartCard{
+#top10ComboChartCard,
+#userEquipmentFailuresChartCard{
     display:none;
 }
